# django-sweet-utils

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
django_sweet_utils/: apps.py  settings.py
django_sweet_utils/admin/: actions.py
django_sweet_utils/api/: metadata.py  pagination.py  permissions.py  views.py
django_sweet_utils/db/: models.py
django_sweet_utils/misc/: json.py  logging.py
django_sweet_utils/serializers/: fields.py
django_sweet_utils/templatetags/: format_str.py  query_string.py
